--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "17.0.2",
+    "react-svg-radar-chart": "^1.3.0"
   },
   "devDependencies": {
     "@types/react": "17.0.9",
+    "@types/react-svg-radar-chart": "^1.2.2",
     "typescript": "4.3.2"
   }
 }
